fix align galeria

--- a/wp-content/themes/lafaete/css/style.css
+++ b/wp-content/themes/lafaete/css/style.css
@@ -2442,6 +2442,7 @@ img {
 }
 .imagem img {
   height: 100%;
+  width: 100%;
   object-fit: cover;
   transition: all 500ms ease-in-out;
   cursor: pointer;
