--- a/wp-content/themes/lafaete/scss/_lightbox.scss
+++ b/wp-content/themes/lafaete/scss/_lightbox.scss
@@ -81,7 +81,8 @@ img { vertical-align: middle; }
 	margin: 20px 0;
 	max-height: 300px;
 	img{
-		height: 100%;
+        height: 100%;
+        width: 100%;
 		object-fit: cover;
 		transition: all 500ms ease-in-out;
 		cursor: pointer;
